<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="@string/key_ip_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ip_address" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="@string/key_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_port" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="@string/key_upload_script"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_upload" />
</PreferenceScreen>
